<resources>
    <string name="app_name">20BCM053 LAB 4</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="ac">AC</string>
    <string name="_pow">^</string>
    <string name="_percent">%</string>
    <string name="_div">/</string>
    <string name="_multiply">X</string>
    <string name="_subtract">-</string>
    <string name="_add">+</string>
    <string name="_eval">=</string>
    <string name="_left_parenthesis">(</string>
    <string name="_right_parenthesis">)</string>
    <string name="_fact">!</string>
    <string name="sqrt">sqrt</string>
    <string name="enter">Enter</string>
    <string name="multiply">*</string>
</resources>