<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010919"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="365dp"
        android:layout_height="513dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/b7"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_7"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/b8"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_8"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/b9"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_9"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/b4"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_4"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/b5"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_5"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/b6"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_6"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_1"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_2"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_3"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/b0"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_0"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/b_dot"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_dot"
            app:layout_column="1"
            app:layout_row="5" />

        <Button
            android:id="@+id/b_ac"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/ac"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/b_pow"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_pow"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/b_mod"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_percent"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/b_div"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_div"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/b_mult"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/multiply"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/b_sub"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_subtract"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/b_add"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_add"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/b_eval"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_eval"
            app:layout_column="3"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/b_back"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_margin="2dp"
            android:backgroundTint="@color/black"
            app:layout_column="2"
            app:layout_row="5"
            app:srcCompat="@android:drawable/ic_input_delete" />

        <Button
            android:id="@+id/b_left_parenthesis"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_left_parenthesis"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/b_right_parenthesis"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_right_parenthesis"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/b_factorial"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/_fact"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/b_square_root"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="1dp"
            android:backgroundTint="@color/black"
            android:text="@string/sqrt"
            app:layout_column="0"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="375dp"
        android:layout_height="120dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-condensed-light"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />
</androidx.constraintlayout.widget.ConstraintLayout>